--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-fe1-fpe",
-  "version": "0.0.5",
+  "version": "0.0.6",
   "description": "Node.js implementation of the FE1 Format Preserving Encryption algorithm.",
   "main": "index.js",
   "private": false,
@@ -35,10 +35,10 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
     "eslint": "^5.9.0",
     "eslint-config-ecollect-base": "0.0.2",
     "eslint-plugin-import": "^2.14.0",
-    "expect.js": "^0.3.1",
     "mocha": "^5.2.0",
     "nyc": "^13.1.0"
   },
