--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "node-fe1-fpe",
-  "version": "0.1.0",
+  "version": "1.0.0-beta.1",
   "description": "Node.js implementation of the FE1 Format Preserving Encryption algorithm.",
   "main": "index.js",
   "private": false,
   "engines": {
-    "node": ">=0.8.0"
+    "node": ">=10.8.0"
   },
   "directories": {
     "lib": "./lib"
